[tool.poetry]
name = "prodfinalbot"
version = "0.1.0"
description = ""
authors = ["ITSDENISSKA <fotiev.d1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
APScheduler = "^3.10.4"
apscheduler-di = "^0.1.0"
aioredis = "^2.0.1"
environs = "^11.0.0"
black = "^24.3.0"
requests = "^2.31.0"
redis = {extras = ["asyncio"], version = "^5.0.3"}
pymongo = "^4.6.2"
motor = "^3.3.2"
osmnx = "^1.9.1"
networkx = "^3.2.1"
staticmap = "^0.5.7"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
